--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -20,3 +20,9 @@ jobs:
         VALIDATE_ALL_CODEBASE: false
         DEFAULT_BRANCH: main
         GITHUB_TOKEN: ${{ secrets.ADITYA_TOKEN }}
+        
+    - name: setup java  
+      uses: actions/setup-java@v3
+      with:
+        distribution: 'temurin' # See 'Supported distributions' for available options
+        java-version: '11'
