--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -35,3 +35,6 @@ jobs:
 
     - name: Set up Docker Buildx
       uses: docker/setup-buildx-action@v3
+
+    - name: build docker image
+      run: docker build -t adityaverticurl/myapp .
