--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -38,3 +38,9 @@ jobs:
 
     - name: build docker image
       run: docker build -t adityaverticurl/myapp .
+
+    - name: Login to Docker Hub
+      uses: docker/login-action@v3
+      with:
+        username: ${{ secrets.DOCKER_USERNAME }}
+        password: ${{ secrets.DOCKER_PASSWORD }}
