--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -37,7 +37,7 @@ jobs:
       uses: docker/setup-buildx-action@v3
 
     - name: build docker image
-      run: docker build -t adityaverticurl/myapp .
+      run: cp -R /home/runner/work/docker-k8s/docker-k8s/target . && docker build -t adityaverticurl/myapp .
 
     - name: Login to Docker Hub
       uses: docker/login-action@v3
