--- a/.github/workflows/workflows.yml
+++ b/.github/workflows/workflows.yml
@@ -64,3 +64,8 @@ jobs:
       with:
         push: true
         tags: adityaverticurl/myapp:latest
+        
+    - name: ZAP Scan
+      uses: zaproxy/action-full-scan@v0.7.0
+      with:
+        target: 'https://www.zaproxy.org/'
